# windowsapp_singleton

./: .gitignore  CMakeLists.txt  README.md  some_note.md
src/: impl.cc  pub.h
tests/: CMakeLists.txt  show_window_main.cc  test_impl.cc
